<resources>
    <string name="app_name">Profile Manager</string>
    <string name="app_title">Soccer Team Manager </string>
    <string name="name_hint">(Please enter a team name)</string>
    <string name="name_label">Team Name</string>
    <string name="address_hint">(Please enter a ZIP code)</string>
    <string name="address_label">Team Address</string>
    <string name="button_text">OPEN IN GOOGLE MAPS</string>
    <string name="new_avatar_title">Select a new avatar</string>
    <string name="new_avata_button">LOGO FROM PHONE</string>

</resources>